# ppcdisasm-cpp

./: CMakeLists.txt  README.md
.github/workflows/: test.yml
include/ppcdisasm/: ppc-dis.hpp  ppc-forms.h  ppc-mnemonics.h  ppc-operands.h  ppc-relocations.h  ppc750-mnemonics.h  ppcps-forms.h  ppcps-mnemonics.h
src/: benchmark.cpp  benchmarkDecode.cpp  benchmarkDisassemble.cpp  genOpIds.cpp  ppc-dis.cpp  ppc-opc.c
test/: disas_test.cpp
